Fix on mobile

--- a/client/css/dmail.css
+++ b/client/css/dmail.css
@@ -38,6 +38,7 @@ main {
 		float: none;
 		width: 100%;
 		height: auto;
+		position: relative;
 	}
 
 	main, footer {
